; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_subtitlehandler.c_get_sub_source.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_subtitlehandler.c_get_sub_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"Import\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"Format\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"SSA\00", align 1
@IMPORTSSA = common dso_local global i32 0, align 4
@IMPORTSRT = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [6 x i8] c"title\00", align 1
@VOBSUB = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [6 x i8] c"Track\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @get_sub_source to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_sub_source(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32* @ghb_dict_get(i32* %13, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %30

17:                                               ; preds = %2
  %18 = load i32*, i32** %6, align 8
  %19 = call i8* @ghb_dict_get_string(i32* %18, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i8* %19, i8** %7, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %22, label %28

22:                                               ; preds = %17
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @strcasecmp(i8* %23, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %28, label %26

26:                                               ; preds = %22
  %27 = load i32, i32* @IMPORTSSA, align 4
  store i32 %27, i32* %3, align 4
  br label %62

28:                                               ; preds = %22, %17
  %29 = load i32, i32* @IMPORTSRT, align 4
  store i32 %29, i32* %3, align 4
  br label %62

30:                                               ; preds = %2
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @ghb_dict_get_int(i32* %31, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0))
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %8, align 4
  %34 = call %struct.TYPE_5__* @ghb_lookup_title(i32 %33, i32* null)
  store %struct.TYPE_5__* %34, %struct.TYPE_5__** %9, align 8
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %36 = icmp eq %struct.TYPE_5__* %35, null
  br i1 %36, label %37, label %39

37:                                               ; preds = %30
  %38 = load i32, i32* @VOBSUB, align 4
  store i32 %38, i32* %3, align 4
  br label %62

39:                                               ; preds = %30
  %40 = load i32*, i32** %5, align 8
  %41 = call i32* @ghb_dict_get(i32* %40, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0))
  store i32* %41, i32** %10, align 8
  %42 = load i32*, i32** %10, align 8
  %43 = icmp eq i32* %42, null
  br i1 %43, label %44, label %46

44:                                               ; preds = %39
  %45 = load i32, i32* @VOBSUB, align 4
  store i32 %45, i32* %3, align 4
  br label %62

46:                                               ; preds = %39
  %47 = load i32*, i32** %5, align 8
  %48 = call i32 @ghb_dict_get_int(i32* %47, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0))
  store i32 %48, i32* %11, align 4
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = load i32, i32* %11, align 4
  %53 = call %struct.TYPE_6__* @hb_list_item(i32 %51, i32 %52)
  store %struct.TYPE_6__* %53, %struct.TYPE_6__** %12, align 8
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %55 = icmp ne %struct.TYPE_6__* %54, null
  br i1 %55, label %56, label %60

56:                                               ; preds = %46
  %57 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %58 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %57, i32 0, i32 0
  %59 = load i32, i32* %58, align 4
  store i32 %59, i32* %3, align 4
  br label %62

60:                                               ; preds = %46
  %61 = load i32, i32* @VOBSUB, align 4
  store i32 %61, i32* %3, align 4
  br label %62

62:                                               ; preds = %60, %56, %44, %37, %28, %26
  %63 = load i32, i32* %3, align 4
  ret i32 %63
}

declare dso_local i32* @ghb_dict_get(i32*, i8*) #1

declare dso_local i8* @ghb_dict_get_string(i32*, i8*) #1

declare dso_local i32 @strcasecmp(i8*, i8*) #1

declare dso_local i32 @ghb_dict_get_int(i32*, i8*) #1

declare dso_local %struct.TYPE_5__* @ghb_lookup_title(i32, i32*) #1

declare dso_local %struct.TYPE_6__* @hb_list_item(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
